--- a/index.html
+++ b/index.html
@@ -5,8 +5,23 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cool Cositas</title>
+    <link rel="stylesheet" href="styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap" rel="stylesheet">
 </head>
 <body>
-    <h1>HIIIII</h1>
+    <div class="main-wrapper">
+        <div class="navbar">
+            <a class="nav-item">Home</a>
+            <a class="nav-item selected">Blog</a>
+        </div>
+        <div class="page">
+            <h1 class="title">Are Biology conventions any fun?</h1>
+            <img src="https://static.wikia.nocookie.net/discord/images/e/e6/Mee6.png/revision/latest?cb=20201028153812.png" style="width:2rem; height:2rem; display:inline; vertical-align:middle">
+            <p style="width:2rem; height:2rem; display:inline; vertical-align:middle; margin-left: 10px;">Emilio Baceda</p>
+            <p style="width:2rem; height:2rem; display:inline; vertical-align:middle; font-size: small"> · 10 minute read</p>
+        </div>
+    </div>
 </body>
 </html>
