--- a/index.html
+++ b/index.html
@@ -11,17 +11,22 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap" rel="stylesheet">
 </head>
 <body>
-    <div class="main-wrapper">
-        <div class="navbar">
-            <a class="nav-item">Home</a>
-            <a class="nav-item selected">Blog</a>
-        </div>
-        <div class="page">
-            <h1 class="title">Are Biology conventions any fun?</h1>
-            <img src="https://static.wikia.nocookie.net/discord/images/e/e6/Mee6.png/revision/latest?cb=20201028153812.png" style="width:2rem; height:2rem; display:inline; vertical-align:middle">
-            <p style="width:2rem; height:2rem; display:inline; vertical-align:middle; margin-left: 10px;">Emilio Baceda</p>
-            <p style="width:2rem; height:2rem; display:inline; vertical-align:middle; font-size: small"> · 10 minute read</p>
-        </div>
+    <div class="nav">
+        <a class="nav-item">Cool Cositas</a>
+        <a class="nav-item selected">Blog</a>
+    </div>
+    <div class="page">
+        <h1 class="title">Are Biology Conventions Any Fun?</h1>
+
+        <img src="img/mee6.png" style="width:20px; display: inline-block; vertical-align: middle;">
+        <p class="credits" style="display: inline-block; vertical-align: middle;">By Emilio Baceda · 5 minute read</p>
+        <p class="text">What's up homies? Welcome to my super rad "Cool Cositas" blog where I post cool stuff every week! This week I went to a Biology Convention in Belfa- STOP ROLLING YOUR EYES! I'll make it interesting, I promise (or maybe not). So as I was saying, I went to the Biology Convenction in Belfast. As soon as I stepped in, I was blinded by white everywhere, the paint on the walls, the lights, the lab coats. It was like staring straight into a flashlight! <br>
+        <br>I could see there was a person who was handing out some free lab coats, wanting me to join the cool kid's club. I think I looked gorgeous in that old, crusty outfit. So there are basically 4 sections in the convention itself. 2 are boring, and 2 are interesting. <br>
+        <br>First section was the Biological Warfare Convention. Now before you think it's some sort of FPS multiplayer shooter like Call of Duty, it's not. It's where people create diseases to kill living things, like us. This sub-convention was made to prevent production of those thingies. <br>
+        <br>Second section is the Biological Diversity convention,, it basically tries its best to keep life diverse and stop endangerement of living species to have a more colorful world. We're pretty selfish you know? At least I know I am. We are basically making more organisms extinct without noticing it. <br>
+        <br>Let's get into the interesting sections. Section 3 (aka my fav). This is a plant growing competition to see who can get the biggest of each plant. I liked the pupmkin, it was the biggest thing I've ever seen. The thing is literally fenced off from the public. It's 3 times bigger than I am, to put it into perspective. My favourite one was the giant eggpla-<br><img src="img/giantpumpkin1.png" style="min-width: 300px; max-width: 500px;"><br>
+        <br>Final section was just some merchandise. There were t-shirts with fancy words like: "Look Morty, I'm a pickle, I'm pickle Rick!"< or "Ok Bloomer". It was a lot of fun looking at the dad-jokey shirts. <br><img src="img/rickle.png" style="width:100px"><br>All in all, I think I enjoyed my visit to the Biology Convention, many people were nice and just wanted the world to be a better place. Finally people to share my thoughts with.<br>
+        <br>This is my first and hopefully last post to my blog, bye, love ya.</p>
     </div>
 </body>
 </html>
